--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
     "name": "react-native-orientation-locker",
-    "version": "1.0.7",
+    "version": "1.0.8",
+    "summary": "A react-native module that can listen on orientation changing of device",
     "description": "A react-native module that can listen on orientation changing of device, get current orientation, lock to preferred orientation.",
+    "homepage": "https://github.com/wonday/react-native-orientation-locker",
     "main": "index.js",
     "repository": {
         "type": "git",
