--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,38 +1,16 @@
 apply plugin: 'com.android.library'
 
-def _ext = rootProject.ext
-
-/* 
-    If you want to change this properties, just put them on your android/build.gradle like this:
-
-    buildscript {
-        ...
-    }
-
-    ext {
-        compileSdkVersion = 27
-        minSdkVersion = 16
-        targetSdkVersion = 27
-        buildToolsVersion = "27.0.3"
-    }
-
-    allprojects {
-        ...
-    }
-*/
-def _reactNativeVersion = _ext.has('reactNative') ? _ext.reactNative : '+'
-def _compileSdkVersion = _ext.has('compileSdkVersion') ? _ext.compileSdkVersion : 27
-def _buildToolsVersion = _ext.has('buildToolsVersion') ? _ext.buildToolsVersion : '27.0.3'
-def _minSdkVersion = _ext.has('minSdkVersion') ? _ext.minSdkVersion : 16
-def _targetSdkVersion = _ext.has('targetSdkVersion') ? _ext.targetSdkVersion : 27
+def safeExtGet(prop, fallback) {
+    rootProject.ext.has(prop) ? rootProject.ext.get(prop) : fallback
+}
 
 android {
-    compileSdkVersion _compileSdkVersion
-    buildToolsVersion _buildToolsVersion
+    compileSdkVersion safeExtGet('compileSdkVersion', 27)
+    buildToolsVersion safeExtGet('buildToolsVersion', '27.0.3')
 
     defaultConfig {
-        minSdkVersion _minSdkVersion
-        targetSdkVersion _targetSdkVersion
+        minSdkVersion safeExtGet('minSdkVersion', 16)
+        targetSdkVersion safeExtGet('targetSdkVersion', 26)
         versionCode 1
         versionName "1.0"
         ndk {
@@ -42,5 +20,5 @@ android {
 }
 
 dependencies {
-    implementation "com.facebook.react:react-native:${_reactNativeVersion}"
+    implementation "com.facebook.react:react-native:${safeExtGet('reactNative', '+')}"
 }
