--- a/example/package.json
+++ b/example/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "react": "16.13.1",
     "react-native": "0.63.2",
-    "react-native-orientation-locker": "^1.2.0",
+    "react-native-orientation-locker": "Link:../",
     "react-native-windows": "^0.63.6"
   },
   "devDependencies": {
