--- a/example/package.json
+++ b/example/package.json
@@ -13,8 +13,8 @@
   "dependencies": {
     "react": "16.13.1",
     "react-native": "0.63.2",
-    "react-native-orientation-locker": "link:../",
-    "react-native-windows": "^0.63.6"
+    "react-native-orientation-locker": "./src",
+    "react-native-windows": "^0.63.3"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
