fix bundling paths

--- a/src/package.json
+++ b/src/package.json
@@ -4,8 +4,8 @@
   "summary": "A react-native module that can listen on orientation changing of device",
   "description": "A react-native module that can listen on orientation changing of device, get current orientation, lock to preferred orientation.",
   "homepage": "https://github.com/wonday/react-native-orientation-locker",
-  "main": "index.js",
-  "types": "index.d.ts",
+  "main": "../index.js",
+  "types": "../index.d.ts",
   "repository": {
       "type": "git",
       "url": "git+https://github.com/wonday/react-native-orientation-locker.git"
