Update package.json to keep module info in root, depedencies in src

--- a/package.json
+++ b/package.json
@@ -4,11 +4,24 @@
   "summary": "A react-native module that can listen on orientation changing of device",
   "description": "A react-native module that can listen on orientation changing of device, get current orientation, lock to preferred orientation.",
   "homepage": "https://github.com/wonday/react-native-orientation-locker",
-  "main": "../index.js",
-  "types": "../index.d.ts",
   "repository": {
       "type": "git",
       "url": "git+https://github.com/wonday/react-native-orientation-locker.git"
+  },
+  "keywords": [
+      "orientation",
+      "react-native",
+      "android",
+      "ios",
+      "screen"
+  ],
+  "author": {
+      "name": "Wonday",
+      "url": "https://github.com/wonday"
+  },
+  "license": "MIT",
+  "bugs": {
+      "url": "https://github.com/wonday/react-native-orientation-locker/issues"
   },
   "private": true,
   "workspaces": [ "src", "example" ]
