--- a/example/package.json
+++ b/example/package.json
@@ -8,13 +8,13 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
-    "start:windows": "react-native start --use-react-native-windows --projectRoot ../"
+    "start:windows": "react-native start --use-react-native-windows"
   },
   "dependencies": {
     "react": "16.13.1",
     "react-native": "0.63.2",
-    "react-native-orientation-locker": "link:../",
-    "react-native-windows": "^0.63.3"
+    "react-native-windows": "^0.63.3",
+    "react-native-orientation-locker": "file: ../../../"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
