Fix Up Example Projects

--- a/example/package.json
+++ b/example/package.json
@@ -8,13 +8,14 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
+    "clean:windows": "rmdir /s node_modules\\react-native-orientation-locker\\node_modules\\",
     "start:windows": "react-native start --use-react-native-windows"
   },
   "dependencies": {
     "react": "16.13.1",
     "react-native": "0.63.2",
-    "react-native-windows": "^0.63.3",
-    "react-native-orientation-locker": "file: ../../../"
+    "react-native-orientation-locker": "file: ../../../",
+    "react-native-windows": "^0.63.3"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
