Add Windows Script

--- a/example/package.json
+++ b/example/package.json
@@ -9,7 +9,8 @@
     "test": "jest",
     "lint": "eslint .",
     "clean:windows": "rmdir /s node_modules\\react-native-orientation-locker\\node_modules\\",
-    "start:windows": "react-native start --use-react-native-windows"
+    "start:windows": "react-native start --use-react-native-windows",
+    "windows": "react-native run-windows --no-packager"
   },
   "dependencies": {
     "react": "16.13.1",
