--- a/windows/OrientationWindows/OrientationWindows.vcxproj
+++ b/windows/OrientationWindows/OrientationWindows.vcxproj
@@ -155,6 +155,11 @@
   <ItemGroup>
     <Midl Include="ReactPackageProvider.idl" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="$(ReactNativeWindowsDir)\Microsoft.ReactNative\Microsoft.ReactNative.vcxproj">
+      <Project>{f7d32bd0-2749-483e-9a0d-1635ef7e3136}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <!--Here-->
   <ImportGroup Label="ReactNativeWindowsTargets">
