--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "dependencies": {
     },
     "peerDependencies": {
-        "react": "16.13.1",
-        "react-native": "0.63.2",
-        "react-native-windows": "^0.63.3"
+        "react": ">=16.13.1",
+        "react-native": ">=0.63.2",
+        "react-native-windows": ">=0.63.3"
     },
     "devDependencies": {
         "react": "16.13.1",
