--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
         "react-native-windows": ">=0.63.3"
     },
     "devDependencies": {
-        "react": "16.13.1",
-        "react-native": "0.63.2",
-        "react-native-windows": "^0.63.3"
+        "react": "*",
+        "react-native": "*",
+        "react-native-windows": "*"
     }
 }
