--- a/package.json
+++ b/package.json
@@ -33,6 +33,11 @@
         "react-native": ">=0.63.2",
         "react-native-windows": ">=0.63.3"
     },
+    "peerDependenciesMeta": {
+        "react-native-windows": {
+            "optional": true
+        }
+    },
     "devDependencies": {
         "react": "16.13.1",
         "react-native": "0.63.2",
